packages/fortifier-macros/tests/validations/phone-number/invalid_default_country_fail.rs
use fortifier::Validate;

#[derive(Validate)]
struct PhoneNumberData<'a> {
    #[validate(phone_number(default_country = ZZ))]
    value: &'a str,
}

fn main() {}
